fix(android): settings navigation, beat the bot sounds
1. Settings Back Button
   - Added onBackClick parameter to SettingsScreen
   - Created SETTINGS_FROM_DASHBOARD route with back button
   - Dashboard settings icon now navigates to settings with back arrow

2. Beat The Bot Sounds
   - Added sounds for correct/incorrect answers
   - Success sound plays on correct answer
   - Warning sound plays on incorrect/timeout

3. Navigation Fixes
   - Fixed Dashboard -> Settings/Scanner/History to use proper back stack
   - Added missing ArrowBack import to SettingsScreen

BUILD SUCCESSFUL

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -34,6 +34,10 @@
     <string name="scan_instruction">Align QR code within frame</string>
     <string name="analyzing_url">Analyzing URL…</string>
     <string name="scans_in_history">%d scans in history</string>
+    <string name="enter_url_manually">Or enter URL manually</string>
+    <string name="url_placeholder">https://example.com</string>
+    <string name="analyze_url">Analyze</string>
+    <string name="url_hint">Paste or type any URL to analyze</string>
     
     <!-- Results -->
     <string name="risk_score">Risk Score</string>
