--- a/androidApp/src/main/res/values-es/strings.xml
+++ b/androidApp/src/main/res/values-es/strings.xml
@@ -503,4 +503,13 @@
     <string name="privacy_type2">Tipo II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Arquitectura Offline-First</string>
+    <string name="feature_offline_desc">El análisis completo se realiza localmente. Tu cámara y datos escaneados nunca tocan un servidor externo.</string>
+    <string name="feature_explainable_title">Seguridad Explicable</string>
+    <string name="feature_explainable_desc">No solo un Bloquear. Proporcionamos desgloses heurísticos detallados de parámetros URL y redirecciones.</string>
+    <string name="feature_performance_title">Motor de Alto Rendimiento</string>
+    <string name="feature_performance_desc">Optimizado para entornos móviles. Los escaneos se procesan en menos de 5ms usando primitivas nativas de Kotlin.</string>
+
 </resources>
