--- a/androidApp/src/main/res/values-fr/strings.xml
+++ b/androidApp/src/main/res/values-fr/strings.xml
@@ -503,4 +503,13 @@
     <string name="privacy_type2">Type II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Architecture Hors Ligne</string>
+    <string name="feature_offline_desc">L\'analyse complète est effectuée localement. Votre caméra et les données scannées ne touchent jamais un serveur externe.</string>
+    <string name="feature_explainable_title">Sécurité Explicable</string>
+    <string name="feature_explainable_desc">Pas seulement un Bloquer. Nous fournissons des analyses heuristiques détaillées des paramètres URL et redirections.</string>
+    <string name="feature_performance_title">Moteur Haute Performance</string>
+    <string name="feature_performance_desc">Optimisé pour les environnements mobiles. Les scans sont traités en moins de 5ms avec des primitives Kotlin natives.</string>
+
 </resources>
