--- a/androidApp/src/main/res/values-in/strings.xml
+++ b/androidApp/src/main/res/values-in/strings.xml
@@ -446,4 +446,13 @@
     <string name="privacy_type2">Tipe II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Arsitektur Offline-First</string>
+    <string name="feature_offline_desc">Analisis lengkap dilakukan secara lokal. Kamera dan data pindaian Anda tidak pernah menyentuh server eksternal.</string>
+    <string name="feature_explainable_title">Keamanan yang Dapat Dijelaskan</string>
+    <string name="feature_explainable_desc">Bukan hanya Blokir. Kami menyediakan analisis heuristik terperinci dari parameter URL dan pengalihan.</string>
+    <string name="feature_performance_title">Mesin Performa Tinggi</string>
+    <string name="feature_performance_desc">Dioptimalkan untuk lingkungan seluler. Pemindaian diproses dalam waktu kurang dari 5ms menggunakan primitif Kotlin asli.</string>
+
 </resources>
