--- a/androidApp/src/main/res/values-ja/strings.xml
+++ b/androidApp/src/main/res/values-ja/strings.xml
@@ -463,4 +463,13 @@
     <string name="privacy_type2">Type II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">オフラインファーストアーキテクチャ</string>
+    <string name="feature_offline_desc">完全な分析はローカルで実行されます。カメラフィードとスキャンデータは外部サーバーに触れることはありません。</string>
+    <string name="feature_explainable_title">説明可能なセキュリティ</string>
+    <string name="feature_explainable_desc">単なるブロックではありません。URLパラメータとリダイレクトの詳細なヒューリスティック分析を提供します。</string>
+    <string name="feature_performance_title">高性能エンジン</string>
+    <string name="feature_performance_desc">モバイル環境に最適化。ネイティブKotlinプリミティブを使用して5ミリ秒未満でスキャンを処理します。</string>
+
 </resources>
