--- a/androidApp/src/main/res/values-ko/strings.xml
+++ b/androidApp/src/main/res/values-ko/strings.xml
@@ -457,4 +457,13 @@
     <string name="privacy_type2">Type II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">오프라인 우선 아키텍처</string>
+    <string name="feature_offline_desc">전체 분석이 로컬에서 수행됩니다. 카메라 피드와 스캔 데이터는 외부 서버에 접촉하지 않습니다.</string>
+    <string name="feature_explainable_title">설명 가능한 보안</string>
+    <string name="feature_explainable_desc">단순한 차단이 아닙니다. URL 매개변수와 리디렉션에 대한 상세한 휴리스틱 분석을 제공합니다.</string>
+    <string name="feature_performance_title">고성능 엔진</string>
+    <string name="feature_performance_desc">모바일 환경에 최적화되었습니다. 네이티브 Kotlin 프리미티브를 사용하여 5ms 이내에 스캔을 처리합니다.</string>
+
 </resources>
