--- a/androidApp/src/main/res/values-ru/strings.xml
+++ b/androidApp/src/main/res/values-ru/strings.xml
@@ -463,4 +463,13 @@
     <string name="privacy_type2">Тип II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Архитектура Offline-First</string>
+    <string name="feature_offline_desc">Полный анализ выполняется локально. Ваша камера и отсканированные данные никогда не касаются внешнего сервера.</string>
+    <string name="feature_explainable_title">Объяснимая Безопасность</string>
+    <string name="feature_explainable_desc">Не просто Заблокировать. Мы предоставляем детальный эвристический анализ параметров URL и редиректов.</string>
+    <string name="feature_performance_title">Высокопроизводительный Движок</string>
+    <string name="feature_performance_desc">Оптимизирован для мобильных сред. Сканирование выполняется менее чем за 5мс с использованием нативных примитивов Kotlin.</string>
+
 </resources>
