--- a/androidApp/src/main/res/values-th/strings.xml
+++ b/androidApp/src/main/res/values-th/strings.xml
@@ -446,4 +446,13 @@
     <string name="privacy_type2">ประเภท II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">สถาปัตยกรรม Offline-First</string>
+    <string name="feature_offline_desc">การวิเคราะห์ทั้งหมดดำเนินการภายในเครื่อง กล้องและข้อมูลที่สแกนของคุณไม่เคยสัมผัสเซิร์ฟเวอร์ภายนอก</string>
+    <string name="feature_explainable_title">ความปลอดภัยที่อธิบายได้</string>
+    <string name="feature_explainable_desc">ไม่ใช่แค่บล็อก เราให้การวิเคราะห์ heuristics โดยละเอียดของพารามิเตอร์ URL และการเปลี่ยนเส้นทาง</string>
+    <string name="feature_performance_title">เอนจิ้นประสิทธิภาพสูง</string>
+    <string name="feature_performance_desc">ปรับให้เหมาะสมสำหรับสภาพแวดล้อมมือถือ สแกนประมวลผลภายใน 5ms โดยใช้ Kotlin primitives ดั้งเดิม</string>
+
 </resources>
