--- a/androidApp/src/main/res/values-tr/strings.xml
+++ b/androidApp/src/main/res/values-tr/strings.xml
@@ -446,4 +446,13 @@
     <string name="privacy_type2">Tip II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Çevrimdışı-Öncelikli Mimari</string>
+    <string name="feature_offline_desc">Tam analiz yerel olarak gerçekleştirilir. Kameranız ve taranan verileriniz asla harici bir sunucuya dokunmaz.</string>
+    <string name="feature_explainable_title">Açıklanabilir Güvenlik</string>
+    <string name="feature_explainable_desc">Sadece bir Engelle değil. URL parametreleri ve yönlendirmelerin ayrıntılı sezgisel analizlerini sunuyoruz.</string>
+    <string name="feature_performance_title">Yüksek Performanslı Motor</string>
+    <string name="feature_performance_desc">Mobil ortamlar için optimize edilmiştir. Taramalar yerel Kotlin primitifleri kullanılarak 5ms altında işlenir.</string>
+
 </resources>
