--- a/androidApp/src/main/res/values-vi/strings.xml
+++ b/androidApp/src/main/res/values-vi/strings.xml
@@ -446,4 +446,13 @@
     <string name="privacy_type2">Loại II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">Kiến trúc Offline-First</string>
+    <string name="feature_offline_desc">Phân tích hoàn chỉnh được thực hiện cục bộ. Camera và dữ liệu quét của bạn không bao giờ chạm vào máy chủ bên ngoài.</string>
+    <string name="feature_explainable_title">Bảo mật Có thể Giải thích</string>
+    <string name="feature_explainable_desc">Không chỉ là Chặn. Chúng tôi cung cấp phân tích heuristic chi tiết về tham số URL và chuyển hướng.</string>
+    <string name="feature_performance_title">Công cụ Hiệu suất Cao</string>
+    <string name="feature_performance_desc">Được tối ưu hóa cho môi trường di động. Quét được xử lý trong dưới 5ms bằng các nguyên thủy Kotlin gốc.</string>
+
 </resources>
