--- a/androidApp/src/main/res/values-zh/strings.xml
+++ b/androidApp/src/main/res/values-zh/strings.xml
@@ -463,4 +463,13 @@
     <string name="privacy_type2">类型II</string>
     <string name="privacy_iso">ISO</string>
     <string name="privacy_27001">27001</string>
+
+    <!-- Feature Cards -->
+    <string name="feature_offline_title">离线优先架构</string>
+    <string name="feature_offline_desc">完整分析在本地执行。您的相机画面和扫描数据永远不会接触外部服务器。</string>
+    <string name="feature_explainable_title">可解释安全性</string>
+    <string name="feature_explainable_desc">不仅仅是阻止。我们提供URL参数和重定向的详细启发式分析。</string>
+    <string name="feature_performance_title">高性能引擎</string>
+    <string name="feature_performance_desc">针对移动环境优化。使用原生Kotlin原语在5毫秒内完成扫描处理。</string>
+
 </resources>
